# DevEnv

./: .gitignore  CMakeLists.txt  CMakePresets.json  DevEnv.sln  README.md  build_windows_docs.bat  build_windows_env_debug.bat  build_wsl_debug.sh  vcpkg.json
DevEnvUI/: App.axaml  App.axaml.cs  CMakeLists.txt  DevEnvUI.cpp  MainWindow.axaml  MainWindow.axaml.cs  Program.cs  app.manifest
DevEnvUI/include/: DevEnvUI.h
DevEnvUI/src/: CMakeLists.txt  main.cpp
cli/: CMakeLists.txt  README.md
cli/include/: devenv_cli.h
cli/include/devenv_cli/: command.h  command_funcs.h  command_handler.h
cli/src/: command_handler.c  commands.c  main.c
cli/src/commands/: help.c  version.c
cmake/: docs.cmake  options.cmake
docs/: Doxyfile.in
shared/: CMakeLists.txt  README.md
shared/include/: devenv_utils.h
shared/include/devenv_utils/: progress.h  string.h
shared/src/: string.c
